# Auto

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  travis.sh
src/: color.rs  lib.rs  main.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
src/os/linux/: mod.rs
src/os/macos/: app.rs  keyboard.rs  macros.rs  mod.rs  mouse.rs  screen.rs  wheel.rs
src/os/macos/keyboard/: key_code.rs  mod.rs
src/os/windows/: mod.rs  mouse.rs  screen.rs
