[package]
name = "auto"
version = "0.0.1"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/auto/"
keywords = ["cross-platform", "automation"]
description = "Cross-platform facilities designed for easy automation."
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
cfg-if = "0.1"
lazy_static = "1.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2"

[build-dependencies]
version_check = "0.1"
