[package]
name = "auto"
version = "0.0.5"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
repository = "https://github.com/nvzqz/Auto"
documentation = "https://docs.rs/auto/"
keywords = ["cross-platform", "automation"]
description = "Cross-platform input event automation facilities."
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
bitflags    = "1.0"
cfg-if      = "0.1"
lazy_static = "1.0"

[target."cfg(target_os = \"macos\")".dependencies]
libc = "0.2"
objc = "0.2"

[build-dependencies]
version_check = "0.1"
